# Nocarz

./: .gitignore  Justfile  README.md  base_model.ipynb  base_model.py  data.ipynb  pyproject.toml  requirements.txt  setup.cfg
data/processed/: listings.csv  test.csv  train.csv
logs/: logs.csv
models/: base_model.pkl  label_encoders.pkl  tfidf_vectorizer.pkl
nocarz/: config.py
nocarz/api/: main.py  schemas.py  utils.py
nocarz/src/: advanced_model.py  base_model.py
notebooks/: AB_test.ipynb  advanced_model.ipynb  base_model.ipynb  data.ipynb
results/logs/: logs.csv
users/: users.csv
