[metadata]
name = nocarz
description = W momencie w którym dodawana jest oferta należy wypełnić wiele pól. Może dałoby się jakoś usprawnić ten proces?
author = Michał Pałasz & Michał Sadlej
platforms = linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages = nocarz
install_requires =
    setuptools>=56.0.0
    fastapi[standard]>=0.115.12
    pandas>=2.2.3
    scikit-learn>=1.6.1
    matplotlib>=3.10.3
    seaborn>=0.13.2
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    black==24.8.0
    flake8==7.1.2
    mypy==1.14.1

[options.package_data]
bla_bla = py.typed

[flake8]
max-line-length = 160
exclude =
    .venv
