[metadata]
name = nocarz
description = W momencie w którym dodawana jest oferta należy wypełnić wiele pól. Może dałoby się jakoś usprawnić ten proces?
author = Michał Pałasz & Michał Sadlej
platforms = linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages = nocarz
install_requires =
    setuptools>=56.0
    fastapi[standard]>=0.115
    pandas>=2.2
    scikit-learn>=1.6
    matplotlib>=3.10
    seaborn>=0.13
    requests>=2.32
    types-requests>=2.32
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    black>=24.8
    flake8>=7.1
    mypy>=1.14

[options.package_data]
bla_bla = py.typed

[flake8]
max-line-length = 160
exclude =
    .venv
